--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,3 @@
 theme: minima
 title: Jahyun Koo's Blog
-description: Exploring AI, VLMs, and more
-
-# Author info (optional)
-author:
-  name: Jahyun Koo
-  email: your.email@example.com
-
-# Social links (optional)
-github_username: jahyunkoo
-
-# Minima theme customization
-minima:
-  skin: dark  # 옵션: auto / classic / dark / solarized-light / solarized-dark
-
-# Optional build settings
-markdown: kramdown
-highlighter: rouge
-
-# Navigation links (optional)
-header_pages:
-  - index.md
-  - pivot-blog.md
+description: My AI course blog
